<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/title_name"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/tv_title"
        android:text="@string/user_info"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="left"/>

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_user"
        android:textColor="#000011"
        android:hint="@string/hint_account"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableLeft="@drawable/icon_user"
        android:drawablePadding="5dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_below="@id/et_user"
        android:textColor="#000011"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="5dp"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/tv_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/et_password"
        android:text="@string/server_info"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="left"/>

    <EditText
        android:id="@+id/ip_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_server"
        android:textColor="#000011"
        android:hint="@string/hint_ip"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="5dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/port_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_below="@id/ip_edit_text"
        android:textColor="#000011"
        android:hint="@string/hint_port"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="5dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/port_edit_text"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/login"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/register"
        android:textSize="20sp"/>

</RelativeLayout>