<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/register_title_name"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_title"
        android:textColor="#000011"
        android:hint="@string/hint_name"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_below="@id/et_user"
        android:textColor="#000011"
        android:hint="@string/hint_gender"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_tel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_below="@id/et_gender"
        android:textColor="#000011"
        android:hint="@string/hint_tel"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_below="@id/et_tel"
        android:textColor="#000011"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_below="@id/et_password"
        android:textColor="#000011"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_confirm_password"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/register"
        android:textSize="20sp"/>

</RelativeLayout>